--- a/index.html
+++ b/index.html
@@ -1,8 +1,27 @@
-{
-	"folders": [
-		{
-			"path": "."
-		}
-	],
-	"settings": {}
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
+    <title>inova week baby</title>
+</head>
+<body>
+    <header>
+        <img id="hero" width="400px" src="imagens/WhatsApp Image 2022-09-21 at 11.59.31 (1).jpeg" alt="ft do marcelin o inova.">
+        <h1 id="hero"> oi sou eu Marcelo Jimenez e isso é a inovaweek</h1>
+        <img id="hero" width="600px" src="imagens/banner-inovaweek-1.jpg" alt="ft inova">
+    </header>
+    <main>
+        <h1>Sobre o evento inovaweek</h1>
+        <p id="hero">
+            Esse ano foi o meu primeiro ano de inovaweek, não sei por onde começar de tão legal que foi o evento. O evento apresenta os alunos que mostra seu talento, criatividade e aprendizagem. Percebi muita coisa boa nesse evento, ele me truxe um aprendizagem a trabalhar em equipe, principalmente. A inovaweek foi um evento que ajudou tambem muito alunos a encontrar seu caminho com sua profissão ou entrar no mundo do empreendedorismo.
+        </p>
+    </main>
+
+
+<body>
+</script>
+</body>
+</html>
